--- a/assets/js/.eslintrc.json
+++ b/assets/js/.eslintrc.json
@@ -81,10 +81,13 @@
         "lines-between-class-members": "error",
         "max-depth": "error",
         "max-len": "off",
-        "max-lines": "error",
+        "max-lines": "warn",
         "max-nested-callbacks": "error",
         "max-params": "error",
-        "max-statements": "error",
+        "max-statements": [
+            "warn",
+            20
+        ],
         "max-statements-per-line": "error",
         "multiline-comment-style": [
             "error",
@@ -108,6 +111,7 @@
         "no-catch-shadow": "error",
         "no-confusing-arrow": "error",
         "no-continue": "error",
+        "no-console": "off",
         "no-div-regex": "error",
         "no-duplicate-imports": "error",
         "no-else-return": "error",
@@ -131,7 +135,7 @@
         "no-lonely-if": "error",
         "no-loop-func": "error",
         "no-magic-numbers": "off",
-        "no-mixed-operators": "error",
+        "no-mixed-operators": "off",
         "no-mixed-requires": "error",
         "no-multi-assign": "error",
         "no-multi-spaces": "error",
@@ -227,8 +231,8 @@
             "last"
         ],
         "sort-imports": "error",
-        "sort-keys": "error",
-        "sort-vars": "error",
+        "sort-keys": "off",
+        "sort-vars": "off",
         "space-before-blocks": "error",
         "space-before-function-paren": "off",
         "space-in-parens": [
