--- a/assets/js/.eslintrc.json
+++ b/assets/js/.eslintrc.json
@@ -85,7 +85,7 @@
         "max-nested-callbacks": "error",
         "max-params": "error",
         "max-statements": [
-            "warn",
+            "off",
             20
         ],
         "max-statements-per-line": "error",
