--- a/assets/js/.eslintrc.json
+++ b/assets/js/.eslintrc.json
@@ -127,7 +127,7 @@
         "no-implicit-globals": "error",
         "no-implied-eval": "error",
         "no-inline-comments": "error",
-        "no-invalid-this": "error",
+        "no-invalid-this": "warn",
         "no-iterator": "error",
         "no-label-var": "error",
         "no-labels": "error",
